simple, but efficient

--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
-bhg's nest
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<html lang="en">
+  <head>
+    <title>bhg's lair</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <style type="text/css">
+body {
+    text-align: center;
+}
+
+#home {
+    margin-top: 20em;
+}
+
+#quote {
+    color: #BB0000;
+    font-weight: bold;
+}
+#links {
+    padding-top: 0.5em;
+}
+#mail {
+    padding-top: 0.5em;
+    color: #BBBBBB;
+}
+    </style>
+  </head>
+
+  <body>
+    <div id="home">
+      <p id="quote">bhodorog lives here</p>
+      <div id="links">
+        <a href="https://github.com/bhodorog">Github</a> |
+        <a href="https://bitbucket.org/bhodorog">Bitbucket</a>
+      </div>
+      <div id="mail">
+        mailto: bogdan.hodorog(at)gmail.com
+      <div>
+    </div>
+  </body>
+</html>
