logos for links

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@ body {
     <div id="home">
       <p id="quote">bhodorog lives here</p>
       <div id="links">
-        <a href="https://github.com/bhodorog">Github</a> |
-        <a href="https://bitbucket.org/bhodorog">Bitbucket</a>
+        <a href="https://github.com/bhodorog"><img src="Octocat.jpg" alt="github" width="40" height="33"></a>
+        <a href="https://bitbucket.org/bhodorog"><img src="Bitbucket.jpg" alt="bitbucket" width="33" height="33"></a>
       </div>
       <div id="mail">
         mailto: bogdan.hodorog(at)gmail.com
