--- a/index.html
+++ b/index.html
@@ -1,38 +1,40 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html lang="en">
   <head>
-    <title>bhg's lair</title>
+    <link rel="icon" type="image/x-icon" href="http://bhodorog.github.io/bhg.ico">
+    <title>'s lair</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <style type="text/css">
 body {
     text-align: center;
+    font-family: monospace;
 }
 
 #home {
-    margin-top: 20em;
+    margin-top: 25%;
 }
 
 #quote {
     color: #BB0000;
     font-weight: bold;
 }
-#links {
-    padding-top: 0.5em;
+.quote {
+    margin: 0.5em 0 0 0;
 }
 #mail {
-    padding-top: 0.5em;
-    color: #BBBBBB;
+    color: #DDDDDD;
+    font-
 }
     </style>
   </head>
 
   <body>
     <div id="home">
-      <p id="quote">bhodorog lives here</p>
       <div id="links">
         <a href="https://github.com/bhodorog"><img src="Octocat.jpg" alt="github" width="40" height="33"></a>
         <a href="https://bitbucket.org/bhodorog"><img src="Bitbucket.jpg" alt="bitbucket" width="33" height="33"></a>
       </div>
+      <p class="quote"><span id="quote">bh</span>odoro<span id="quote">g</span> lives here</p>
       <div id="mail">
         mailto: bogdan.hodorog(at)gmail.com
       <div>
