--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html lang="en">
   <head>
-    <link rel="icon" type="image/x-icon" href="http://bhodorog.github.io/bhg.ico">
-    <title>'s lair</title>
+    <link rel="icon" type="image/x-icon" href="http://bhodorog.github.io/prompt.ico">
+    <title>stat -x /dev/bhg</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <style type="text/css">
 body {
